Fixing button collor on IE

--- a/style/main.less
+++ b/style/main.less
@@ -95,6 +95,9 @@ main {
 	button {
 		.control;
 		display: block;
+		background-color: white;
+		//background-image: none;
+
 		width: @button-size;
 		height: @button-size;
 		margin: @button-grow;
